page a propos fini

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Fandom Minecraft - A propos</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,16 +41,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Acceuil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">A propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="post.html">Sample Post</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Nous contacter</a>
           </li>
         </ul>
       </div>
@@ -64,8 +64,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <h1>A propos de Minecraft</h1>
+            <span class="subheading">le jeu de cube infini</span>
           </div>
         </div>
       </div>
@@ -76,12 +76,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Minecraft est un jeu de type back à sable (sandbox) où l'on incarne un humain qui peut réaliser de grande chose avec ses petites mains.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto
-          error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas
-          voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex
-          itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>Minecraft est un jeu de type back à sable (sandbox) où l'on incarne un humain qui peut réaliser de grande
+          chose avec ses petites mains.</p>
+        <p>En solo le but du jeu est de survivre, pour cela le joueur doit explorer des grottes, des dimensions et les
+          différents point d'intéret
+          pour pouvoir trouver des matériaux et outils qui lui permettront de se battre contre des créatures hostile.
+        </p>
+        <p>Ce n'est pas qu'un simple jeu solo, c'est aussi un jeu multi-joueur où les joueurs se rencontre pour créer,
+          partager et s'affronter sur des domaines différents les PvP (joueur contre joueur) des aventure en coop, des
+          build fight etc...</p>
+        <p>Le jeu peut être moddé (modifier) pour voir un autre aspect du jeu ou alors une amélioration de ce dernier
+          comme la possibilé d'avoir plus de type de nourriture, la production d'électricité ou encore plus
+          d'exploration !</p>
       </div>
     </div>
   </div>
