Page ressource terminer et ajout d'image

--- a/ressource.html
+++ b/ressource.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html"><img src="img/logoMcpetit.png" class="imgHeader"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -99,60 +99,102 @@
             type de bloc qui sont disséminer dans le monde. Pour cela les joueurs devra explorer ou miner pour les
             obtenirs</p>
 
-          <p><a href="#"><i>La nourriture:</i></a> elle permet au joueur de survivre en mode survie chaque nourriture
+          <p><a href="#nourriture"><i>La nourriture:</i></a> elle permet au joueur de survivre en mode survie chaque
+            nourriture
             possède sa propre saturation et satiété pour éviter de perdre de la vie et pour permettre au joueur d'en
             récupérer si il en a perdu. La nourriture peut etre récuperé via <a href="#"><i>la récolte</i></a> ou alors
             via <a href="#"><i>la chasse</i></a>.</p>
 
-          <p><a href="#"><i>Les matériaux:</i></a> Ils permettents au joueur de forger des armes et armures pour se
+          <p><a href="#materiaux"><i>Les matériaux:</i></a> Ils permettents au joueur de forger des armes et armures
+            pour se
             défendre ou alors chasser pour avoir d'autre matériaux, on peut créer des outils avec les différent
-            matériaux (<a href="#"><i>bois</i></a>, <a href="#"><i>pierre</i></a>, <a href="#"><i>fer</i></a>, <a
+            matériaux (<a href="#bois"><i>bois</i></a>, <a href="#"><i>pierre</i></a>, <a href="#"><i>fer</i></a>, <a
               href="#"><i>diamand</i></a> et <a href="#"><i>or</i></a>) pour récolter des blocs possédant différent
             niveau de minage.</p>
 
 
-          <h2 class="section-heading">Nourriture</h2>
+          <h2 class="section-heading" id="nourriture">Nourriture</h2>
 
           <p><strong>Le pain:</strong> une nourriture obtenable grâce a l'agriculture en faisant pousser du blé il vous
-            faut 3 <img src="img/wheat20x20.png" alt="wheat-MC"> dans une table de craft pour obtenir 1 <img
-              src="img/pain20x20.png" alt="bread-MC"> il restaure 5 demi-gigot (5 points de nourriture) <img src="img/Faim_moitié20x20.png"
-              alt="faim-moitier-img"><img src="img/Faim20x20.png" alt="fain-img"><img src="img/Faim20x20.png" alt="fain-img"> et 6 points de saturation</p>
+            faut 3 blés<img src="img/wheat20x20.png" alt="wheat-MC"> dans une table de craft pour obtenir 1 <img
+              src="img/pain20x20.png" alt="bread-MC">. Il restaure 5 demi-gigot (5 points de nourriture) <img
+              src="img/Faim_moitié20x20.png" alt="faim-moitier-img"><img src="img/Faim20x20.png" alt="fain-img"><img
+              src="img/Faim20x20.png" alt="fain-img"> et 6 points de saturation</p>
 
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a
-            task to occupy the generations. And no matter how much progress one makes, there is always the thrill of
-            just beginning.</p>
+          <p><strong>Le poisson<img src="img/morue_crue20x20.png" alt="morue-MC">:</strong> une nourriture obtenable
+            grâce a <a href="#">la pêche</a> crue, il restaure 2 point de nourriture soit <img src="img/Faim20x20.png"
+              alt="fain-img"> et 0.4 de saturation. Il peut être cuit dans un four avec un <a href="#">combustible</a>
+            pour obtenir de la morue cuite <img src="img/Morue_cuite20x20.png" alt="morue_cuite-MC"> qui donne 5 point
+            de nourriture <img src="img/Faim_moitié20x20.png" alt="faim-moitier-img"><img src="img/Faim20x20.png"
+              alt="fain-img"><img src="img/Faim20x20.png" alt="fain-img"> et 6 point de saturation. La morue crue peut
+            être utiliser pour approvoiser un ocelot.</p>
 
-          <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow.
-            Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the
-            next ten.</blockquote>
 
-          <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a
-            historical process which mankind is carrying out in accordance with the natural laws of human development.
-          </p>
+          <p><strong>Le gâteau<img src="img/gateaux_MC20x20.png" alt="gateaux-MC">:</strong> cette nourriture n'est pas
+            disponible a l'état naturel, le joueur doit assembler les différents composant du gâteau pour pouvoir
+            l'obtenir, c'est aussi la seul nourriture qui ne se consomme pas a la main il faut donc le poser au sol et
+            faire un clique droit dessus pour consommer 1 part soit 2 point de nourriture<img src="img/Faim20x20.png"
+              alt="fain-img"> et 0.4 de saturation, pour un total de 7 parts de gâteaux donc 14 point de nourriture<img
+              src="img/Faim20x20.png" alt="fain-img"><img src="img/Faim20x20.png" alt="fain-img"><img
+              src="img/Faim20x20.png" alt="fain-img"><img src="img/Faim20x20.png" alt="fain-img"><img
+              src="img/Faim20x20.png" alt="fain-img"><img src="img/Faim20x20.png" alt="fain-img"><img
+              src="img/Faim20x20.png" alt="fain-img"> et de 2.8 point de saturation. Sa recette est la suivante: 3
+            sceaux de lait<img src="img/Seau_de_lait20x02.png" alt="seau_de_lait-MC">, 1 oeuf<img
+              src="img/oeuf20x20.png" alt="oeuf-MC">, 2 sucres<img src="img/Sucre20x20.png" alt="sucre-MC"> et 3
+            blés<img src="img/wheat20x20.png" alt="wheat-MC"></p>
 
-          <h2 class="section-heading">Reaching for the Stars</h2>
+          <h2 class="section-heading" id="materiaux">Matériaux</h2>
 
-          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-            marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
-            delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a
-            man.</p>
+          <p id="bois"><strong>Le bois<img src="img/Buche_de_chene20x20.png" alt="buche_chene-MC">:</strong> C'est avec
+            cette
+            ressource que nous débutont sur le jeu, car elle est a la base de tous craft sur le jeu, avec elle on peut
+            faire des <a href="">outils</a>, <a href="">armes</a>, barrière pour protéger les champs, un abris de
+            fortune et même du combustible. Si
+            on met du bois dans le four, on peut soit l'utiliser comme combustible soit transformer une buche en charbon
+            de bois<img src="img/Charbon_de_bois20x20.png" alt="charcoal-MC"> qui est l'équivalent du charbon<img
+              src="img/Charbon20x20.png" alt="coal-MC">.</p>
 
-          <a href="#">
-            <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
-          </a>
-          <span class="caption text-muted">To go places and do things that have never been done before – that’s what
-            living is all about.</span>
+          <p><strong>la pierre<img src="img/cobble20x20.png" alt="cobble-MC"><img src="img/Pierres20x20.png"
+                alt="pierre-MC">:</strong> ou alors son autre nom: <i>la cobblestone</i><img src="img/cobble20x20.png"
+              alt="cobble-MC"> est une
+            ressource qui permet de créer des outils et armes plus puissant que ce en bois pour pouvoir récuperer le
+            minerais de fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer">, elle sert a créer un élément essentiel a la survie sur Minecraft la création de four pour
+            obtenir des lingo de fer et autre métaux ou alors cuire ses aliments pour obtenir plus de point de
+            nourriture et saturation ou même annuler les effets nefaste de certains aliments. On peut aussi mettre de la
+            cobblestone<img src="img/cobble20x20.png" alt="cobble-MC"> et un combustible dans un four pour avoir de la
+            pierre<img src="img/Pierres20x20.png" alt="pierre-MC"> qui possède les même propriété que la
+            cobblestone<img src="img/cobble20x20.png" alt="cobble-MC"> mais sert surtout a faire de la décoration.</p>
 
-          <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to
-            explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone
-            before.</p>
+          <p><strong>Le charbon<img src="img/Charbon20x20.png" alt="coal-MC">:</strong> cette ressource se trouve a
+            l'état naturel sous forme de minerais de charbon<img src="img/Minerai_de_charbon20x20.png"
+              alt="Minerai_de_charbon-MC"> qui se récolte avec l'aide d'une pioche<img src="img/Pioche_en_pierre.png"
+              alt="pioche-MC"> de tous niveau de minage. C'est l'un des minéraux les plus commun sur le jeu et on le
+            trouve assez fréquement
+            partout dans les grottes et même à la surface. Cette
+            ressource sert de combustible ou alors à la confection de torche pour éclairer les zones sombre dans les
+            grottes lors d'exploration. Mais ce pendant elle reste une ressources crucial dans l'aventure car elle
+            permet de faire fondre du <a href="#">minerais de fer <img src="img/Minerai_de_fer20x20.png"
+                alt="Minerai_de_fer-MC"></a> ou
+            du <a href="#">minerais d'or <img src="img/Minerai_d'or20x20.png" alt="Minerai_d'or-MC"></a> ainsi passer au
+            niveau suppérieur.</p>
 
-          <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth
-            to our nature, Man must explore, and this is exploration at its greatest.</p>
+          <p><strong>Le fer<img src="img/Lingot_de_fer20x20.png" alt="Lingot_de_fer-MC">:</strong> cette ressource se
+            trouve a l'état naturel sour forme de minerais de fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer"> on la
+            trouve uniquement en profondeur dans des grottes. Elle permet de créer des outils, armes et armures de
+            qualité intermédiaire. Elle permet de miner l'or et le diamand sans perdre la ressource. Pour obtenir un
+            lingo de fer<img src="img/Lingot_de_fer20x20.png" alt="Lingot_de_fer-MC"> il faut placer un minerais de
+            fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer-MC"></a> et un combustible (exemple: du
+            charbon<img src="img/Charbon20x20.png" alt="coal-MC">) dans un four.</p>
 
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+          <p><strong>le diamand<img src="img/Diamant20x20.png" alt="diamond-MC">:</strong> cette ressource est a la fois
+            rare est la plus avancé du jeu, on la rencontre sour la forme de minerais de diamand<img
+              src="img/minerai_de_diamant20x20.png" alt="minerai_de_diamant-MC"> et pas avant la couche 12, il est
+            conseiller de miner vers la couche 11 pour avoir plus de chance d'avoir du diamand. Une fois récuperé on
+            peut faires des armes, armures et outils. Son niveau de minage permet de miner et récuperer l'obsidienne<img
+              src="img/Obsidienne20x20.png" alt="obsidienne-MC">
+            pour soit aller dans le <a href="#">nether</a> soit créer une table d'enchantement<img
+              src="img/Table_d'enchantement20x20.png" alt="Table_d'enchantement-MC"> pour pouvoir enchanter les
+            outils, armes et armures.</p>
         </div>
       </div>
     </div>
