ajout de la page equipement

--- a/ressource.html
+++ b/ressource.html
@@ -158,7 +158,8 @@
                 alt="pierre-MC">:</strong> ou alors son autre nom: <i>la cobblestone</i><img src="img/cobble20x20.png"
               alt="cobble-MC"> est une
             ressource qui permet de créer des outils et armes plus puissant que ce en bois pour pouvoir récuperer le
-            minerais de fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer">, elle sert a créer un élément essentiel a la survie sur Minecraft la création de four pour
+            minerais de fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer">, elle sert a créer un élément
+            essentiel a la survie sur Minecraft la création de four pour
             obtenir des lingo de fer et autre métaux ou alors cuire ses aliments pour obtenir plus de point de
             nourriture et saturation ou même annuler les effets nefaste de certains aliments. On peut aussi mettre de la
             cobblestone<img src="img/cobble20x20.png" alt="cobble-MC"> et un combustible dans un four pour avoir de la
@@ -179,7 +180,8 @@
             niveau suppérieur.</p>
 
           <p><strong>Le fer<img src="img/Lingot_de_fer20x20.png" alt="Lingot_de_fer-MC">:</strong> cette ressource se
-            trouve a l'état naturel sour forme de minerais de fer<img src="img/Minerai_de_fer20x20.png" alt="Minerai_de_fer"> on la
+            trouve a l'état naturel sour forme de minerais de fer<img src="img/Minerai_de_fer20x20.png"
+              alt="Minerai_de_fer"> on la
             trouve uniquement en profondeur dans des grottes. Elle permet de créer des outils, armes et armures de
             qualité intermédiaire. Elle permet de miner l'or et le diamand sans perdre la ressource. Pour obtenir un
             lingo de fer<img src="img/Lingot_de_fer20x20.png" alt="Lingot_de_fer-MC"> il faut placer un minerais de
