--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="about.html">C'est quoi?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="post.html">Informations</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
