--- a/ressource.html
+++ b/ressource.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="about.html">A propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="post.html">Informations</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Nous contacter</a>
