ajout de la page de redirection

--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@
             <a class="nav-link" href="index.html">Acceuil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">C'est quoi?</a>
+            <a class="nav-link" href="about.html">A propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="post.html">Informations</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Nous contacter</a>
           </li>
         </ul>
       </div>
