--- a/creature_passive.html
+++ b/creature_passive.html
@@ -77,12 +77,12 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>Lors de son aventure, le joueur rencontrera des créature, passve ou hostile mais aussi des créature neutre.
-            Les créatures passie apparaissent la journée tantis que les créature hostile apparaissent la nuit.</p>
+            Les créatures passives apparaissent la journée tandis ce que les créature hostile apparaissent la nuit.</p>
 
-          <p> <a href="#creaturePasive">Les créature passive</a>: ce sont des créature qui n'attaque pas le joeurs ce
+          <p> <a href="#creaturePasive">Les créature passive</a>: ce sont des créature qui n'attaque pas le joueur ce
             sont généralement des animaux
             leurs seul but est de donner au joueur des ressources pour survivre ou avancer dans son aventure. On peut
-            retrouver les vaches, les moutons, les cochons et bien plus encores ! .</p>
+            retrouver les vaches, les moutons, les cochons et bien plus encore ! .</p>
 
           <p> <a href="#creatureNeutre">Les créature neutre</a>: ce sont des créatures qui sont normalement passive
             contrairement au créature passive,
