--- a/equipement.html
+++ b/equipement.html
@@ -86,7 +86,7 @@
             aussi de survivre grace à l'agriculture, chasse et pêche. Ils servent aussi à récolter les ressources pour
             amméliorer son équipement tout au long de l'aventure.</p>
 
-          <p><a href="#arme"><strong>Les armes:</strong></a> elles aident le joueurs à survivre face aux créatures
+          <p><a href="#arme"><strong>Les armes:</strong></a> elles aident le joueur à survivre face aux créatures
             hostiles
             mais aussi pour chasser des créatures passive pour récolter des <a href="ressource.html">ressources</a>.</p>
 
@@ -95,7 +95,7 @@
 
           <h2 class="section-heading">Équipement</h2>
 
-          <p id="armure"><a href="#armure"><strong>Les armures:</strong></a> sont composé de 4 parties botte, jambière,
+          <p id="armure"><a href="#armure"><strong>Les armures:</strong></a> sont composées de 4 parties bottes, jambières,
             plastron et casque. Elles aident le joueurs a se protéger des
             créatures hostile et des environnement hostile comme la
             lave grâce aux enchantements qui peuvent booster les caractéristiques des armures. Elles peuvent être
