--- a/ressource.html
+++ b/ressource.html
@@ -96,20 +96,20 @@
           <p>Les ressources dans minecraft permettent aux joueurs de progresser dans leur aventure en <a
               href="#"><i>mode survie</i></a> pour
             pouvoir avoir des outils, armes et armures. Cela permet au joueur de se protéger ou de casser les différent
-            type de bloc qui sont disséminer dans le monde. Pour cela les joueurs devra explorer ou miner pour les
-            obtenirs</p>
+            types de blocs qui sont disséminés dans le monde. Pour cela les joueurs devront explorer ou miner pour les
+            obtenir</p>
 
           <p><a href="#nourriture"><i>La nourriture:</i></a> elle permet au joueur de survivre en mode survie chaque
-            nourriture
+            type de nourriture
             possède sa propre saturation et satiété pour éviter de perdre de la vie et pour permettre au joueur d'en
-            récupérer si il en a perdu. La nourriture peut etre récuperé via <a href="#"><i>la récolte</i></a> ou alors
+            récupérer si il en a perdu. La nourriture peut etre récuperée via <a href="#"><i>la récolte</i></a> ou alors
             via <a href="#"><i>la chasse</i></a>.</p>
 
-          <p><a href="#materiaux"><i>Les matériaux:</i></a> Ils permettents au joueur de forger des armes et armures
+          <p><a href="#materiaux"><i>Les matériaux:</i></a> Ils permettent au joueur de forger des armes et armures
             pour se
             défendre ou alors chasser pour avoir d'autre matériaux, on peut créer des outils avec les différent
             matériaux (<a href="#bois"><i>bois</i></a>, <a href="#"><i>pierre</i></a>, <a href="#"><i>fer</i></a>, <a
-              href="#"><i>diamand</i></a> et <a href="#"><i>or</i></a>) pour récolter des blocs possédant différent
+              href="#"><i>diamant</i></a> et <a href="#"><i>or</i></a>) pour récolter des blocs possédant différents
             niveau de minage.</p>
 
 
